Monday, 16th December 2002, Ron Steinke

	* Fixed a problem with the perl bindings not getting
	  the atlas compile flags, generally cleaned up
	  the passing of those flags from autoconf to
	  the perl makemaker build system

Friday, 2nd May 2003, Al Riddoch

	* Move code from src subdir to Eris.

	* Add second .pc file for glib headers, sort out which version of glib
	  it depends on, and sort out to handle it in the rpm.

Tuesday, 22nd April 2003, James Turner

	* updated README / INSTALL to be up-to-date for the next
	  release, and converted to plain text (from Abiword)

Monday, 24th March 2003, Al Riddoch

	* src/Dispatcher.cpp: Handle missing TO on operations.

Monday, 24th March 2003, Al Riddoch

	* bindings/polls/glib/Makefile.am: Move bindings headers to the new
	  pkgconfig compliant header directory.

Saturday, 1st Febuary 2003, Al Riddoch

	* Convert to pkgconfig.

Friday, 31st January 2003, Al Riddoch

	* Fix Atlas-C++ compiled flags.

Thursday, 30th January 2003, Al Riddoch

	* src/Lobby.h: Make destructor virtual.

	* src/Room.cpp, src/Room.h: Simplify to one constructor.

	* src/World.cpp: Ensure talk dispatcher names are unique.

Monday, 16th December 2002, Ron Steinke

	* src/Avatar.h, src/BaseConnection.h, src/ClassDispatcher.h,
	  src/Entity.h, src/Metaserver.h, src/Player.h, src/Property.h,
	  src/Room.h, src/SignalDispatcher.h, src/Timeout.h,
	  src/TypeInfo.h, src/Wait.h, src/World.h: Changed classes
	  inheriting 'public SigC::Object' to inherit 'virtual public
	  SigC::Object' instead, so multiple inheritance will work

Wednesday, 14th December 2002, Al Riddoch

	* src/Dispatcher.cpp: Take reference to StdBranchDispatcher before
	  calling its subdispatchers so it doesn't get deleted before its
	  finished. Fix use of iterators.

	* src/Dispatcher.h, src/Connection.cpp: Make reference handling
	  methods public, and make connection hold a reference to the
	  root dispatcher so it doesn't get deleted.
