@@ -1,3 +1,3 @@
 $CC = 'g++';
-$CFLAGS = '-I../../../src @WFMATH_CFLAGS@ @ATLAS_CFLAGS@ @SIGCPERL_CFLAGS@';
-$LIBS = '-L../../../src/.libs -leris @WFMATH_LIBS@ @ATLAS_LIBS@ @SIGCPERL_LIBS@';
+$CFLAGS = '-I../../../Eris @WFMATH_CFLAGS@ @ATLAS_CFLAGS@ @SIGCPERL_CFLAGS@';
+$LIBS = '-L../../../Eris/.libs @ERIS_LIBS@ @WFMATH_LIBS@ @ATLAS_LIBS@ @SIGCPERL_LIBS@';
